# docs/swagger.yaml
@@ -226,6 +226,35 @@ paths:
       summary: 用户登录
       tags:
       - 用户管理模块
+  /api/user/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: 根据用户ID删除用户
+      parameters:
+      - description: 用户ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/serializer.BasicResponse-any'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/serializer.BasicResponse-any'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/serializer.BasicResponse-any'
+      summary: 删除用户
+      tags:
+      - 用户管理模块
   /api/user/update:
     patch:
       consumes:
